Changing executable filename

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,4 @@ set(CMAKE_CXX_STANDARD 11)
 
 
 set(SOURCE_FILES main.cpp)
-add_executable(untitled ${SOURCE_FILES})
+add_executable(omptest ${SOURCE_FILES})
